Simplify count operation logic for clarity and readability